[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "skinport-console"
version = "0.1.0"
authors = [
    { name="t1edtke", email="136181851+t1edtke@users.noreply.github.com" }
]
description = "An interactive command-line tool to explore and analyze sales and purchases on the Skinport marketplace."
readme = "README.md"
keywords = ["Skinport", "Counter-Strike 2", "Team Fortress 2", "Dota 2", "Rust", "skinport.py"]
requires-python = ">=3.10"
dependencies = [
    "inquirer",
    "skinport.py",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
licenses = ["MIT"]
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/t1edtke/skinport-console"
Issues = "https://github.com/t1edtke/skinport-console/issues"

[project.scripts]
skinport-console = "skinport_console.cli:main"
